--- a/Web/Pages/CCGMember/Compare/ObjectivePosition.cshtml
+++ b/Web/Pages/CCGMember/Compare/ObjectivePosition.cshtml
@@ -59,7 +59,7 @@
                   };
                 <li role="presentation">
                     <a role="menuitem" tabindex="-1"
-                       asp-page="ObjectivePosition" asp-all-route-data="data">@Localizer["Level"] @level.LevelCode</a>
+                       asp-page="ObjectivePosition" asp-all-route-data="data">@level.LevelCode</a>
                 </li>
                 }
             }
