--- a/Web/Pages/Candidate/Shoreside/SimilarList.cshtml
+++ b/Web/Pages/Candidate/Shoreside/SimilarList.cshtml
@@ -23,9 +23,8 @@
         </thead>
         <tbody>
 
-            @foreach (var position in Model.Positions)
+            @foreach (var position in Model.Positions.Where(e => e.Active != 0))
             {
-                if (position.Active != 0) { 
                 var routedata = new Dictionary<string, string>
                  {
                     {"previouspage", "SimilarList" },
@@ -38,7 +37,6 @@
                     <td>@(isEnglish? position.JobTitleEng: position.JobTitleFre)</td>
                     <td><a asp-page="SimilarDetails" asp-all-route-data="@routedata" role="button">@Localizer["More Details"]</a></td>
                 </tr>
-                }
             }
         </tbody>
     </table>
