--- a/Web/Pages/Student/College/Electronics.cshtml
+++ b/Web/Pages/Student/College/Electronics.cshtml
@@ -25,12 +25,10 @@
             </tr>
         </thead>
         <tbody>
-            @if (Model.SeagoingPositions.Any())
+            @if (Model.SeagoingPositions.Any(e => e.Active != 0))
             {
-                @foreach (var position in Model.SeagoingPositions)
+                @foreach (var position in Model.SeagoingPositions.Where(e => e.Active != 0))
                 {
-                    if (position.Active != 0)
-                    {
                         var routedata = new Dictionary<string, string>
                  {
                     {"previouspage", "../../../Student/College/Electronics" },
@@ -41,7 +39,6 @@
                         <td>@(isEnglish ? position.JobTitleEng : position.JobTitleFre)</td>
                         <td><a asp-page="../../Candidate/Seagoing/Common/Details" asp-all-route-data="@routedata" role="button">@Localizer["More Details"]</a></td>
                     </tr>
-                    }
                 }
             }
             else
@@ -67,12 +64,10 @@
         </thead>
 
         <tbody>
-            @if (Model.ShoreSidePositions.Any())
+            @if (Model.ShoreSidePositions.Any(e => e.Active != 0))
             {
-                @foreach (var position in Model.ShoreSidePositions)
+                @foreach (var position in Model.ShoreSidePositions.Where(e => e.Active != 0))
                 {
-                    if (position.Active != 0)
-                    {
                         var routedata = new Dictionary<string, string>
                  {
                     {"previouspage", "../../Student/College/Electronics" },
@@ -88,7 +83,6 @@
                 <td>@(isEnglish ? position.JobTitleEng : position.JobTitleFre)@space<a target="_blank" href=@pdapUrl>@pdapText</a></td>
                 <td><a asp-page="../../Candidate/Shoreside/SimilarDetails" asp-all-route-data="@routedata" role="button">@Localizer["More Details"]</a></td>
             </tr>
-                    }
                 }
             }
             else
