--- a/Web/Pages/CCGMember/Details.cshtml
+++ b/Web/Pages/CCGMember/Details.cshtml
@@ -27,16 +27,14 @@
                     <th style="background-color:#f2f2f2" colspan="2">@Localizer["CERTIFICATIONS"]</th>
                 </tr>
 
-                @if (Model.PositionCertificates.Any())
+                @if (Model.PositionCertificates.Any(e => e.Active != 0))
                 {
-                    @foreach (var c in Model.PositionCertificates)
+                    @foreach (var c in Model.PositionCertificates.Where(e => e.Active != 0))
                     {
-                        if (c.Active != 0) {
                         var key = "c" + c.Id.ToString();
                         <tr>
                             <td colspan="2">@(isEnglish ? c.NameEng : c.NameFre) @(isEnglish ? c.DescEng : c.DescFre)</td>
                         </tr>
-                        }
                     }
                 }
                 else
@@ -49,16 +47,15 @@
                 {
                     @foreach (var competencytype in Model.PositionCompetencyRatings)
                     {
-                        if (competencytype.Any())
+                        if (competencytype.Any(e => e.Active != 0))
                         {
                             <tr>
                                 <th style="background-color:#f2f2f2" width="80%"> @(isEnglish ? competencytype.FirstOrDefault()?.TypeNameEng.ToUpper() : competencytype.FirstOrDefault()?.TypeNameFre.ToUpper())</th>
                                 <th style="background-color:#f2f2f2" class="text-center" width="20%">@Localizer["LEVEL"]</th>
                             </tr>
 
-                            foreach (var c in competencytype)
+                            foreach (var c in competencytype.Where(e => e.Active != 0))
                             {
-                                if (c.Active != 0) { 
                                 var key1 = "a" + c.CompetencyId.ToString();
                                 var key2 = "b" + c.CompetencyId.ToString();
                                 <tr>
@@ -94,7 +91,6 @@
                                         </section>
                                     </td>
                                 </tr>
-                                }
                             }
                         }
                     }
