--- a/Web/Pages/Candidate/Seagoing/Common/Details.cshtml
+++ b/Web/Pages/Candidate/Seagoing/Common/Details.cshtml
@@ -8,7 +8,7 @@
     var routedata = new Dictionary<string, string> { { "positionid", Model.PositionId.ToString() }, { "groupid", Model.GroupId.ToString() }, { "level", Model.Level.ToString() } };
     var routedatacompare = new Dictionary<string, string> { { "positionid", Model.PositionId.ToString() }, { "previouspage", Model.PreviousPage }, { "previouspagedetails", "../../Candidate/Seagoing/Common/Details" } };
 }
-@if (!Model.PageSubmit)
+@if (!(Model.PageSubmit=="true"))
 {
     <section role="contentinfo">
 
@@ -32,15 +32,14 @@
                     </tr>
                 </thead>
                 <tbody>
-                    @if (Model.PositionCertificates.Any())
+                    @if (Model.PositionCertificates.Any(e => e.Active != 0))
                     {
                         <tr>
                             <th style="background-color:#f2f2f2">@Localizer["CERTIFICATIONS"]</th>
                             <th style="background-color:#f2f2f2" class="text-center">@Localizer["SAME CERTIFICATION"]</th>
                         </tr>
-                        @foreach (var c in Model.PositionCertificates)
+                        @foreach (var c in Model.PositionCertificates.Where(e => e.Active != 0))
                         {
-                            if (c.Active != 0) { 
                             if (Model.CertificateIds.Contains(c.Id.ToString()))
                             {
                                 var key = "c" + c.Id.ToString();
@@ -55,7 +54,6 @@
                                     <td>@(isEnglish ? c.NameEng : c.NameFre) @(isEnglish ? c.DescEng : c.DescFre)</td>
                                     <td class="text-center"><input name="CertificateIds" value="@c.Id" onclick="" type="checkbox" /></td>
                                 </tr>
-                                }
                             }
                         }
                     }
@@ -69,7 +67,7 @@
                     {
                         @foreach (var competencytype in Model.PositionCompetencyRatings)
                         {
-                            if (competencytype.Any())
+                            if (competencytype.Any(e => e.Active != 0))
                             {
                                 <tr>
                                     <th style="background-color:#f2f2f2" width="80%"> @(isEnglish ? competencytype.FirstOrDefault()?.TypeNameEng.ToUpper() : competencytype.FirstOrDefault()?.TypeNameFre.ToUpper())</th>
@@ -78,8 +76,6 @@
 
                                 foreach (var c in competencytype)
                                 {
-                                    if (c.Active != 0)
-                                    {
                                         var key1 = "a" + c.CompetencyId.ToString();
                                         var key2 = "b" + c.CompetencyId.ToString();
                                     <tr>
@@ -115,7 +111,6 @@
                                             </section>
                                         </td>
                                     </tr>
-                                        }
                                     }
                                 }
                             }
@@ -157,10 +152,10 @@
 
         <h4>@Localizer["Question2"]</h4>
         <div class="row mrgn-tp-lg mrgn-lft-lg mr-2">
-            <a asp-page="../../../CCGMember/Similar/SimilarList" asp-all-route-data="@RouteParameter70" class="btn btn-primary mr-2">&nbsp;&nbsp;&nbsp;@Localizer["Low Match"]&nbsp;&nbsp;&nbsp;</a>
-            <a asp-page="../../../CCGMember/Similar/SimilarList" asp-all-route-data="@RouteParameter80" class="btn btn-primary mr-2">&nbsp;&nbsp;&nbsp;@Localizer["Average Match"]&nbsp;&nbsp;&nbsp;</a>
-            <a asp-page="../../../CCGMember/Similar/SimilarList" asp-all-route-data="@RouteParameter90" class="btn btn-primary mr-2">&nbsp;&nbsp;&nbsp;@Localizer["High Match"]&nbsp;&nbsp;&nbsp;</a>
-            <a asp-page="../../../CCGMember/Similar/SimilarList" asp-all-route-data="@RouteParameter100" class="btn btn-primary mr-2">&nbsp;&nbsp;&nbsp;@Localizer["Exact Match"]&nbsp;&nbsp;&nbsp;</a>
+            <a asp-page="../../../CCGMember/Similar/SimilarList" asp-all-route-data="@RouteParameter70" class="btn btn-primary mr-2">&nbsp;&nbsp;&nbsp;@Localizer["70%"]&nbsp;&nbsp;&nbsp;</a>
+            <a asp-page="../../../CCGMember/Similar/SimilarList" asp-all-route-data="@RouteParameter80" class="btn btn-primary mr-2">&nbsp;&nbsp;&nbsp;@Localizer["80%"]&nbsp;&nbsp;&nbsp;</a>
+            <a asp-page="../../../CCGMember/Similar/SimilarList" asp-all-route-data="@RouteParameter90" class="btn btn-primary mr-2">&nbsp;&nbsp;&nbsp;@Localizer["90%"]&nbsp;&nbsp;&nbsp;</a>
+            <a asp-page="../../../CCGMember/Similar/SimilarList" asp-all-route-data="@RouteParameter100" class="btn btn-primary mr-2">&nbsp;&nbsp;&nbsp;@Localizer["100%"]&nbsp;&nbsp;&nbsp;</a>
         </div>
 
         <div class="row">
