--- a/Web/Pages/Candidate/Shoreside/SimilarDetails.cshtml
+++ b/Web/Pages/Candidate/Shoreside/SimilarDetails.cshtml
@@ -10,14 +10,14 @@
     var RouteParameter = new Dictionary<string, string> { { "id", Model.RouteParameter }, { "percentmatch", "&percentMatch=80" }, { "positionid", Model.PositionId.ToString() } };
     var routedata = new Dictionary<string, string> { { "positionid", Model.PositionId.ToString() }, { "groupid", Model.GroupId.ToString() }, { "level", Model.Level.ToString() } };
     var paramdata = new Dictionary<string, string>
-                            {
+                    {
                                  {"previouspagesimilar", "../../Candidate/Shoreside/SimilarDetails" },
                                  {"id", Model.Id.ToString() },
                                  {"positionid", Model.PositionId.ToString()},
                                  {"previouspage", Model.PreviousPage },
                             };
 }
-
+@if (!(Model.PageSubmit == "true")) { 
     <section role="contentinfo">
 
         <div class="col-md-12 mrgn-tp-md mrgn-bttm-md pull-right">
@@ -40,7 +40,7 @@
                 <div class="col-md-9"><h3>@Localizer["Question1"]</h3></div>
                 <div class="col-md-3 mrgn-tp-lg">
                     <a class="btn btn-primary mrgn-rght-md" type="button" asp-all-route-data="@paramdata" asp-page="Compare/AllObjective">@Localizer["Compare"]</a>
-                    <a class="btn btn-primary mrgn-rght-md" type="button" asp-all-route-data="@paramdata" asp-page="../../CCGMember/Similar/SimilarSearch">@Localizer["Similar"]</a>
+                    <button class="btn btn-primary mrgn-rght-md" asp-all-route-data="@paramdata">@Localizer["Similar"]</button>
                 </div>
             </div>
 
@@ -51,39 +51,27 @@
                     </tr>
                 </thead>
                 <tbody>
-                    <tr>
-                        <th style="background-color:#f2f2f2" colspan="2">@Localizer["CERTIFICATIONS"]</th>
-                    </tr>
-                    @if (Model.PositionCertificates.Any())
+                    @if (Model.PositionCertificates.Any(e => e.Active != 0))
                     {
-                        @foreach (var c in Model.PositionCertificates)
+                        <tr>
+                            <th style="background-color:#f2f2f2">@Localizer["CERTIFICATIONS"]</th>
+                            <th style="background-color:#f2f2f2" class="text-center">@Localizer["SAME CERTIFICATION"]</th>
+                        </tr>
+                        @foreach (var c in Model.PositionCertificates.Where(e => e.Active != 0))
                         {
-                            if (c.Active != 0) { 
                             if (Model.CertificateIds.Contains(c.Id.ToString()))
                             {
                                 var key = "c" + c.Id.ToString();
                                 <tr>
-                                    <td colspan="2">
-                                        <a href="#@key" aria-controls="centred-popup" class="wb-lbx" role="button">
-                                            @(isEnglish ? c.NameEng : c.NameFre)
-                                        </a>
-                                        <section id="@key" class="mfp-hide modal-dialog modal-content overlay-def">
-                                            <header class="modal-header">
-                                                <h2 class="modal-title">@(isEnglish ? c.NameEng : c.NameFre)</h2>
-                                            </header>
-                                            <div class="modal-body ">
-                                                <p>@(isEnglish ? c.DescEng : c.DescFre)</p>
-                                                <button class="btn btn-primary popup-modal-dismiss" type="button">@Localizer["Close"]</button>
-                                            </div>
-                                        </section>
-                                    </td>
+                                    <td>@(isEnglish ? c.NameEng : c.NameFre) @(isEnglish ? c.DescEng : c.DescFre)</td>
+                                    <td class="text-center"><input name="CertificateIds" value="@c.Id" type="checkbox" checked="true" /></td>
                                 </tr>
-                                }
                             }
                             else
                             {
                                 <tr>
-                                    <td colspan="2">@(isEnglish ? c.NameEng : c.NameFre)</td>
+                                    <td>@(isEnglish ? c.NameEng : c.NameFre) @(isEnglish ? c.DescEng : c.DescFre)</td>
+                                    <td class="text-center"><input name="CertificateIds" value="@c.Id" onclick="" type="checkbox" /></td>
                                 </tr>
                             }
                         }
@@ -91,58 +79,58 @@
                     else
                     {
                         <tr>
-                            <td colspan="2">@Localizer["No Certifications Found"]</td>
+                            <td colspan="2">@Localizer["No Certifications"]</td>
                         </tr>
                     }
+
                     @if (Model.PositionCompetencyRatings.Any())
                     {
                         @foreach (var competencytype in Model.PositionCompetencyRatings)
                         {
-                            if (competencytype.Any()) { 
-                            <tr>
-                                <th style="background-color:#f2f2f2" width="80%"> @(isEnglish ? competencytype.FirstOrDefault()?.TypeNameEng.ToUpper() : competencytype.FirstOrDefault()?.TypeNameFre.ToUpper())</th>
-                                <th style="background-color:#f2f2f2" class="text-center" width="20%">@Localizer["LEVEL"]</th>
-                            </tr>
+                            if (competencytype.Any(e => e.Active != 0))
+                            {
+                                <tr>
+                                    <th style="background-color:#f2f2f2" width="80%"> @(isEnglish ? competencytype.FirstOrDefault()?.TypeNameEng.ToUpper() : competencytype.FirstOrDefault()?.TypeNameFre.ToUpper())</th>
+                                    <th style="background-color:#f2f2f2" class="text-center" width="20%">@Localizer["LEVEL"]</th>
+                                </tr>
 
-                                foreach (var c in competencytype)
+                                foreach (var c in competencytype.Where(e => e.Active != 0))
                                 {
-                                    if (c.Active != 0) { 
                                     var key1 = "a" + c.CompetencyId.ToString();
                                     var key2 = "b" + c.CompetencyId.ToString();
-                                <tr>
-                                    <td>
-                                        <a href="#@key1" aria-controls="centred-popup" class="wb-lbx" role="button">
-                                            @(isEnglish ? c.CompetencyNameEng : c.CompetencyNameFre)
-                                        </a>
-                                        <section id="@key1" class="mfp-hide modal-dialog modal-content overlay-def">
-                                            <header class="modal-header">
-                                                <h2 class="modal-title">@(isEnglish ? c.CompetencyNameEng : c.CompetencyNameFre)</h2>
-                                            </header>
-                                            <div class="modal-body ">
-                                                <p>@(isEnglish ? c.CompetencyDescEng : c.CompetencyDescFre)</p>
-                                                <button class="btn btn-primary popup-modal-dismiss" type="button">@Localizer["Close"]</button>
-                                            </div>
-                                        </section>
-                                    </td>
-                                    <td class="text-center">
-                                        <a href="#@key2" aria-controls="centred-popup" class="wb-lbx">
-                                            <abbr title="Level @c.RatingValue Summary">
-                                                @c.RatingValue
-                                            </abbr>
-                                        </a>
-                                        <section id="@key2" class="mfp-hide modal-dialog modal-content overlay-def">
-                                            <header class="modal-header">
-                                                <h2 class="modal-title">@Localizer["Position Level"]: @c.RatingValue</h2>
-                                            </header>
-                                            <div class="modal-body ">
-                                                <p>@(isEnglish ? c.RatingNameEng : c.RatingNameFre) @(isEnglish ? c.RatingDescEng : c.RatingDescFre)</p>
-                                                <p>@(isEnglish ? c.CompetencyLevelReqDescEng : c.CompetencyLevelReqDescFre)<p>
+                                    <tr>
+                                        <td>
+                                            <a href="#@key1" aria-controls="centred-popup" class="wb-lbx" role="button">
+                                                @(isEnglish ? c.CompetencyNameEng : c.CompetencyNameFre)
+                                            </a>
+                                            <section id="@key1" class="mfp-hide modal-dialog modal-content overlay-def">
+                                                <header class="modal-header">
+                                                    <h2 class="modal-title">@(isEnglish ? c.CompetencyNameEng : c.CompetencyNameFre)</h2>
+                                                </header>
+                                                <div class="modal-body ">
+                                                    <p>@(isEnglish ? c.CompetencyDescEng : c.CompetencyDescFre)</p>
                                                     <button class="btn btn-primary popup-modal-dismiss" type="button">@Localizer["Close"]</button>
-                                            </div>
-                                        </section>
-                                    </td>
-                                </tr>
-                                    }
+                                                </div>
+                                            </section>
+                                        </td>
+                                        <td class="text-center">
+                                            <a href="#@key2" aria-controls="centred-popup" class="wb-lbx">
+                                                <abbr title="Level @c.RatingValue Summary">
+                                                    @c.RatingValue
+                                                </abbr>
+                                            </a>
+                                            <section id="@key2" class="mfp-hide modal-dialog modal-content overlay-def">
+                                                <header class="modal-header">
+                                                    <h2 class="modal-title">@Localizer["Position Level"]: @c.RatingValue</h2>
+                                                </header>
+                                                <div class="modal-body ">
+                                                    <p>@(isEnglish ? c.RatingNameEng : c.RatingNameFre) @(isEnglish ? c.RatingDescEng : c.RatingDescFre)</p>
+                                                    <p>@(isEnglish ? c.CompetencyLevelReqDescEng : c.CompetencyLevelReqDescFre)<p>
+                                                        <button class="btn btn-primary popup-modal-dismiss" type="button">@Localizer["Close"]</button>
+                                                </div>
+                                            </section>
+                                        </td>
+                                    </tr>
                                 }
                             }
                         }
@@ -162,6 +150,55 @@
         </div>
     </section>
 
+}
+else
+                            {
+                                var RouteParameter70 = new Dictionary<string, string>
+    { { "id", Model.RouteParameter }, { "percentmatch", "&percentMatch=70" }, { "positionid", Model.PositionId.ToString() },
+    {"certificates", Model.Certificates },{ "previouspage",Model.PreviousPage},{ "previouspagedetails","../../Candidate/Shoreside/SimilarDetails"} };
+    var RouteParameter80 = new Dictionary<string, string>
+        { { "id", Model.RouteParameter }, { "percentmatch", "&percentMatch=80" }, { "positionid", Model.PositionId.ToString() },
+        {"certificates", Model.Certificates },{ "previouspage",Model.PreviousPage},{ "previouspagedetails","../../Candidate/Shoreside/SimilarDetails"} };
+        var RouteParameter90 = new Dictionary<string, string>
+            { { "id", Model.RouteParameter }, { "percentmatch", "&percentMatch=90" }, { "positionid", Model.PositionId.ToString() },
+            {"certificates", Model.Certificates },{ "previouspage",Model.PreviousPage},{ "previouspagedetails","../../Candidate/Shoreside/SimilarDetails"} };
+            var RouteParameter100 = new Dictionary<string, string>
+                { { "id", Model.RouteParameter }, { "percentmatch", "&percentMatch=100" }, { "positionid", Model.PositionId.ToString() },
+                {"certificates", Model.Certificates },{ "previouspage",Model.PreviousPage},{ "previouspagedetails","../../Candidate/Shoreside/SimilarDetails"} };
 
+                <section>
+
+                    <h4>@Localizer["Question2"]</h4>
+                    <div class="row mrgn-tp-lg mrgn-lft-lg mr-2">
+                        <a asp-page="../../CCGMember/Similar/SimilarList" asp-all-route-data="@RouteParameter70" class="btn btn-primary mr-2">&nbsp;&nbsp;&nbsp;@Localizer["70%"]&nbsp;&nbsp;&nbsp;</a>
+                        <a asp-page="../../CCGMember/Similar/SimilarList" asp-all-route-data="@RouteParameter80" class="btn btn-primary mr-2">&nbsp;&nbsp;&nbsp;@Localizer["80%"]&nbsp;&nbsp;&nbsp;</a>
+                        <a asp-page="../../CCGMember/Similar/SimilarList" asp-all-route-data="@RouteParameter90" class="btn btn-primary mr-2">&nbsp;&nbsp;&nbsp;@Localizer["90%"]&nbsp;&nbsp;&nbsp;</a>
+                        <a asp-page="../../CCGMember/Similar/SimilarList" asp-all-route-data="@RouteParameter100" class="btn btn-primary mr-2">&nbsp;&nbsp;&nbsp;@Localizer["100%"]&nbsp;&nbsp;&nbsp;</a>
+                    </div>
+
+                    <div class="row">
+                        <div class="col-lg-12 mrgn-tp-md">
+                            <nav role="navigation" class="mrgn-bttm-lg">
+                                <h2 class="wb-inv">Document navigation</h2>
+                                <ul class="pager">
+                                    @{
+                                        var paramdataprevious = new Dictionary<string, string>
+                                                        {
+                              {"positionid", Model.PositionId.ToString()},
+                              {"certificates", Model.Certificates },
+                              {"previouspage",Model.PreviousPage },
+                              {"previouspagedetails", "../../Candidate/Seagoing/Common/Details" },
+                                 {"previouspagesimilar", "../../Candidate/Shoreside/SimilarDetails" },
+                                 {"id", Model.Id.ToString() },
+
+                            };
+                                    }
+                                    <li class="previous"><a class="btn btn-default" type="button" rel="prev" asp-page="SimilarDetails" asp-all-route-data="paramdataprevious">@Localizer["Previous"]</a></li>
+                                </ul>
+                            </nav>
+                        </div>
+                    </div>
+                </section>
+                }
 
 
