--- a/Web/Views/ToPdf/GetSimilarPositionsCandidateAsPdf.cshtml
+++ b/Web/Views/ToPdf/GetSimilarPositionsCandidateAsPdf.cshtml
@@ -21,14 +21,14 @@
                 <td class="bg-primary" width="75%">@positions</td>
             </tr>
 
-            @foreach (var position in Positions)
+            @foreach (var position in Positions.Where(e => e.Active != 0))
             {
-                <tr>
-                    <td>@position.JobGroupCode-@position.JobLevelValue</td>
-                    <td>@(isEnglish? position.JobTitleEng: position.JobTitleFre)</td>
+                    <tr>
+                        <td>@position.JobGroupCode-@position.JobLevelValue</td>
+                        <td>@(isEnglish ? position.JobTitleEng : position.JobTitleFre)</td>
 
-                </tr>
-            }
-        </tbody>
+                    </tr>
+                }
+            </tbody>
     </table>
 </div>
