--- a/Web/Views/ToPdf/GetStudentPositionsAsPdf.cshtml
+++ b/Web/Views/ToPdf/GetStudentPositionsAsPdf.cshtml
@@ -16,7 +16,7 @@
 }
 
 <div class="mrgn-tp-lg">
-    @if (seagoingPositions.Any())
+    @if (seagoingPositions.Any(e => e.Active != 0))
     {
         <h3 class="text-center">@seagoingtitle</h3>
         <table class="table table-hover table-responsive table-bordered">
@@ -26,15 +26,14 @@
                     <td class="bg-primary" width="75%">@positions</td>
                 </tr>
 
-                @foreach (var position in seagoingPositions)
+                @foreach (var position in seagoingPositions.Where(e => e.Active != 0))
                 {
-                    <tr>
-                        <td>@position.JobGroupCode-@position.JobLevelValue</td>
-                        <td>@(isEnglish ? position.JobTitleEng : position.JobTitleFre)</td>
-
-                    </tr>
-                }
-            </tbody>
+                        <tr>
+                            <td>@position.JobGroupCode-@position.JobLevelValue</td>
+                            <td>@(isEnglish ? position.JobTitleEng : position.JobTitleFre)</td>
+                        </tr>
+                    }
+                </tbody>
         </table>
     }
     else
@@ -55,7 +54,7 @@
     }
 </div>
 <div class="mrgn-tp-lg">
-    @if (shoresidePositions.Any())
+    @if (shoresidePositions.Any(e => e.Active != 0))
     {
         <h3 class="text-center">@shoresidetitle</h3>
         <table class="table table-hover table-responsive table-bordered">
@@ -65,14 +64,14 @@
                     <td class="bg-primary" width="75%">@positions</td>
                 </tr>
 
-                @foreach (var position in shoresidePositions)
+                @foreach (var position in shoresidePositions.Where(e => e.Active != 0))
                 {
-                    <tr>
-                        <td>@position.JobGroupCode-@position.JobLevelValue</td>
-                        <td>@(isEnglish ? position.JobTitleEng : position.JobTitleFre)</td>
-                    </tr>
-                }
-            </tbody>
+                        <tr>
+                            <td>@position.JobGroupCode-@position.JobLevelValue</td>
+                            <td>@(isEnglish ? position.JobTitleEng : position.JobTitleFre)</td>
+                        </tr>
+                    }
+                </tbody>
         </table>
     }
     else
